# ckks-engine

./: Cargo.toml  README.md
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/ckks-engine/: all.html  index.html
docs/ckks-engine/arithmetic/: index.html
docs/ckks-engine/ckks/: index.html  struct.CKKSDecryptor.html  struct.CKKSEncryptor.html  struct.CkksParameters.html
docs/ckks-engine/keygen/: index.html  struct.KeyGenerator.html  struct.PublicKey.html  struct.SecretKey.html
docs/ckks-engine/polynomial/: index.html  struct.Polynomial.html
docs/ckks-engine/stringfn/: index.html
docs/ckks-engine/utils/: fn.add_noise.html  fn.decode.html  fn.decode_string.html  fn.encode.html  fn.encode_string.html  fn.mod_reduce.html  fn.mod_reduce_string.html  index.html
docs/ckks_engine/: all.html  index.html
docs/ckks_engine/arithmetic/: index.html
docs/ckks_engine/ckks/: index.html  struct.CKKSDecryptor.html  struct.CKKSEncryptor.html
docs/ckks_engine/keygen/: struct.PublicKey.html  struct.SecretKey.html
docs/ckks_engine/polynomial/: index.html  struct.Polynomial.html
docs/ckks_engine/stringfn/: index.html
docs/ckks_engine/utils/: fn.add_noise.html  fn.decode_string.html
docs/search.desc/ckks_engine/: ckks_engine-desc-0-.js
docs/src/ckks_engine/: arithmetic.rs.html  ckks.rs.html  keygen.rs.html  lib.rs.html  polynomial.rs.html  stringfn.rs.html  utils.rs.html
docs/trait.impl/core/clone/: trait.Clone.js
examples/: demo1.rs
src/: arithmetic.rs  ckks.rs  keygen.rs  lib.rs  main.rs  polynomial.rs  utils.rs
(+7 files in other folders)
